apps/security/vaultwarden/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vaultwarden
  namespace: auth
spec:
  ingressClassName: traefik-external
  entryPoints:
    - websecure
  routes:
    - match: Host(`password.umhomelab.com`) || Host(`www.password.umhomelab.com`)
      kind: Rule
      services:
        - name: vaultwarden
          namespace: auth
          port: 80
  tls: {}
